# qgis-plugin-repository

./: .gitignore  .gitlint  .kodiak.toml  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  README.md  lambda.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml
.github/: CODEOWNERS
.github/workflows/: deploy-production.yml  push.yml  tag.yml  test.yml
documentation/: ARCHITECTURE.md  api.yml  download_plugin.graphml  getxml.graphml  overview.graphml  postplugin.graphml  repo_design.graphml
serverless/: api.py  handler.py  serverless.yml
serverless/assets/: plugins.xsl
src/: api.py  conftest.py
src/plugin/: api.py  aws.py  error.py  log.py  metadata_model.py  plugin_parser.py  plugin_xml.py  swagger_ui.py
src/plugin/static/: openapi.yaml
src/plugin/swagger_ui/static/: swagger.json
static/: openapi.yaml
tests/: conftest.py  test_api.py  test_metadata_model.py
tests/data/: metadata.txt  metadata_invalid.txt  not_a_zipfile.txt
tests/integration/: test_api.py
tests/sys/: api_workflow_tests.py  conftest.py  test_api_checks.py  test_api_dev_workflow.py  test_api_prd_workflow.py  test_invalid.py  utils.py
tests/unit/: test_api.py  test_aws.py  test_metadata_model.py  test_plugin_parser.py  test_plugin_xml.py
utils/: README.md  migrate_plugins.py  new_plugin_record.sh
