[tool.poetry]
name = "s3-qgis-plugin-repo"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
boto3 = "^1.9"
botocore = "^1.12"
werkzeug = "^0.15.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"

[tool.black]
line-length = 127

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

