[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 127

[tool.isort]
profile = "black"

[tool.poetry]
authors = [
    "Bill Nelson <bmnelson@linz.govt.nz>",
    "Blayne Chard <bchard@linz.govt.nz>",
    "Sandro Santilli <strk@kbt.io>",
    "Simon Planzer <splanzer@linz.govt.nz>",
    "Victor Engmark <vengmark@linz.govt.nz>",
]
description = ""
name = "qgis-plugin-repository"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
blinker = "*"
boto3 = "*"
flask = "*"
pynamodb = "*"
python = "^3.10"
structlog = "*"
ulid-py = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
boto3-stubs = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
requests = "*"
types-colorama = "*"
types-pygments = "*"
types-requests = "*"
types-setuptools = "*"
